assets/css/style.css
/* ... */
.cat-search {
	padding-top: 2em;
}

.left-corner {
	position: fixed;
	left: 0;
	bottom: 0;
	margin: 1em;
}

.right-corner {
	position: fixed;
	right: 0;
	bottom: 0;
	margin: 1em;
}


@media only screen and (min-width: 768px) {
	body {
		font-size: 16px;
	}
	p {
		line-height: 1.75;
	}
	
	h3 {
	  font-size: 20px;
	}
}

.navbar-toggler {
	z-index: 1;
}

/*@media(min-width:768px) {*/
    .navbar-light {
        /*padding: 10px 0 15px 0;*/
        border: 0;
        /*background-color: transparent;*/

		background: -webkit-linear-gradient(bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* For Safari 5.1 to 6.0 */
		background: -o-linear-gradient(bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* For Opera 11.1 to 12.0 */
		background: -moz-linear-gradient(bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* For Firefox 3.6 to 15 */
		background: linear-gradient(to bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* Standard syntax (must be last) */

        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
	
	.navbar-dark {
		background-color: transparent;
	}
	.navbar-dark .navbar-toggler {
		border-color: rgba(255,255,255,.4);
	}
	.navbar-dark .navbar-toggler-icon {
		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.7%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
	}
	.navbar-dark .navbar-collapse {
		position: absolute;
		width: 100%;
		top: 0;
		padding-top: 56px;
	}

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
/*}*/

header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-image: url(../img/header-bg.jpg);
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 50px;
    font-weight: 700;
    line-height: 50px;
}

@media(min-width:768px) {
    header .intro-text {
        padding-top: 300px;
        padding-bottom: 200px;
    }

    header .intro-text .intro-lead-in {
        margin-bottom: 25px;
        font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 40px;
        font-style: italic;
        line-height: 40px;
    }

    header .intro-text .intro-heading {
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 75px;
        font-weight: 700;
        line-height: 75px;
    }
}

section {
    padding: 50px 0;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    padding-bottom: 25px;
    text-align: left;
}

section h3.section-subheading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 1.5em;
}

section h4{
    margin: 0;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
}

@media(min-width:768px) {
    section {
        padding: 50px 0;
    }
	#projects #more-projects{
		display:none;
	}
}

.service-heading {
    margin: 15px 0;
    text-transform: none;
}

@media(max-width:768px) {
    #projects {
        padding-top: 50px;
    }
	#projects .portfolio-item {
		margin: auto;
	}
	#projects #more-projects{
		display:block;
	}
}

@media(min-width:500px) and (max-width:767px) {
	#projects .portfolio-item {
		padding: 15px;
	}
}

#projects #more-projects{
	text-align:center;
	z-index: 1000;
	text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
	cursor:pointer; 
}

#projects .portfolio-item {
	max-width: 500px;
	min-width: 250px;
	
}

#projects .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0;
}

#projects .portfolio-item .portfolio-link .portfolio-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 1;
    /*background: rgba(80,68,20,.5);*/
	background: rgba(51,51,51,.4);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#projects .portfolio-item .portfolio-link .portfolio-hover:hover {
    opacity: 0;
}

#projects .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    padding: 15px 0;
    margin-top: -35px;
    text-align: center;
    font-size: 20px;
    color: #fff;
	background: rgba(51,51,51,.2);
}

#projects .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
    margin-top: -12px;
}

#projects .portfolio-item .portfolio-caption {
    margin: 0;
    padding: 25px;
    text-align: center;
    background-color: #fff;
}

#projects .portfolio-item .portfolio-hover-content h4 {
    margin: 0;
    text-transform: none;
}
/* ... */

